# Metamatematico---Razonamiento-Formal-con-Lean

./: .gitignore  AIMathematician.lean  CITATION.md  Dockerfile  EJEMPLOS.md  FUNDAMENTOS_TEORICOS.md  IMPLEMENTATION_PLAN.md  INICIO_RAPIDO.md  INSTALACION.md  KB_CREATION_TRACKER.md  KB_GAP_IMPLEMENTATION_PLAN.md  KB_GAP_PHASE2_PLAN.md  LICENSE  Main.lean  MetamathProver.lean  PLAN.md  README.md  TODO.md  UNIVERSE_EXPANSION.md  app.py  justfile  lake-manifest.json  lakefile.toml  nucleo_config.yaml  pyproject.toml  requirements.txt  requirements_demo.txt
.serena/: project.yml
.streamlit/: config.toml
AIMathematician/: Basic.lean
agents/: README.md  WORKFLOWS.md  proof-engineer.md
data/: lean_examples.json  migrated_graph.json  test_queries.json
dataset/: dataset_schema.md  rl_dataset_analysis.md
deploy/: README_DEPLOY.md  setup_huggingface.sh  setup_vps.sh  streamlit_config.toml
examples/: __init__.py  basic_usage.py  complete_flow.py  demo_external_skills.py  lean_integration.py
experiments/: __init__.py  base.py  exp1_lean.py  exp2_graph.py  exp3_agent.py  run_all.py
knowledgebase/: KB_AUDIT_REPORT_2025-12-24.md  README.md  additive_combinatorics_knowledge_base.md  algebraic_geometry_knowledge_base.md  algebraic_number_theory_knowledge_base.md  algebraic_topology_knowledge_base.md  arithmetic_knowledge_base.md  calculus_of_variations_knowledge_base.md  category_theory_knowledge_base.md  classical_geometry_knowledge_base.md  coding_theory_knowledge_base.md  combinatorics_knowledge_base.md  commutative_algebra_knowledge_base.md  complex_geometry_knowledge_base.md  computability_theory_knowledge_base.md  convex_analysis_knowledge_base.md  differential_geometry_knowledge_base.md  ergodic_theory_knowledge_base.md  fiber_bundles_knowledge_base.md  fourier_analysis_knowledge_base.md  functional_analysis_knowledge_base.md  galois_theory_knowledge_base.md  graph_theory_knowledge_base.md  group_theory_knowledge_base.md  homological_algebra_knowledge_base.md  information_theory_knowledge_base.md  isomorphism_theorems_knowledge_base.md  k_theory_knowledge_base.md  kb_index.yaml  lie_theory_knowledge_base.md  linear_algebra_knowledge_base.md  logic_model_theory_knowledge_base.md  measure_theory_knowledge_base.md  numerical_analysis_knowledge_base.md  operator_algebras_knowledge_base.md  operator_theory_knowledge_base.md  order_theory_knowledge_base.md  ordinary_differential_equations_knowledge_base.md  (+16 more)
lean_api/: main.py  (+3 more)
(+167 files in other folders)
